force-app/main/default/objects/Account/fields/Account_Data__c.field-meta.xml
<CustomField>
    <fullName>Account_Data__c</fullName>
    <label>Account Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>