force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Location</fullName>
            </value>
            <value>
                <fullName>Sister Locations</fullName>
            </value>
            <value>
                <fullName>Headquarters with Satellite Locations</fullName>
            </value>
            <value>
                <fullName>No Locations</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Portfolio Company Owner</fullName>
                <isActive>false</isActive>
                <label>Portfolio Company Owner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>