force-app/main/default/objects/Account/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Account</fullName>
            </value>
            <value>
                <fullName>Former Account</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>