force-app/main/default/objects/Account/fields/Active_or_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Active_or_Inactive__c</fullName>
    <label>Tenant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Client</fullName>
            </value>
            <value>
                <fullName>Inactive Client</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Not Pursuing</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <isActive>false</isActive>
                <label>Active</label>
            </value>
            <value>
                <fullName>Client</fullName>
                <isActive>false</isActive>
                <label>Client</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <isActive>false</isActive>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>N/A</fullName>
                <isActive>false</isActive>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Nurture</fullName>
                <isActive>false</isActive>
                <label>Nurture</label>
            </value>
            <value>
                <fullName>Passed</fullName>
                <isActive>false</isActive>
                <label>Passed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>