force-app/main/default/objects/Account/fields/After_Hours_HVAC__c.field-meta.xml
<CustomField>
    <fullName>After_Hours_HVAC__c</fullName>
    <label>After Hours HVAC</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>