force-app/main/default/objects/Account/fields/Beneficial_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Occupancy__c</fullName>
    <label>Beneficial Occupancy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>