force-app/main/default/objects/Account/fields/BOMA_Method__c.field-meta.xml
<CustomField>
    <fullName>BOMA_Method__c</fullName>
    <label>BOMA Method</label>
    <type>TextArea</type>
</CustomField>