force-app/main/default/objects/Account/fields/Build_to_Suit__c.field-meta.xml
<CustomField>
    <fullName>Build_to_Suit__c</fullName>
    <label>Build to Suit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>