force-app/main/default/objects/Account/fields/Building_Hours_and_Holidays__c.field-meta.xml
<CustomField>
    <fullName>Building_Hours_and_Holidays__c</fullName>
    <label>Building Hours and Holidays</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>