force-app/main/default/objects/Account/fields/Building_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Building_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Building</label>
    <referenceTo>Building__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>