force-app/main/default/objects/Account/fields/Building_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Building_Occupancy__c</fullName>
    <label>Pro-Rata Building Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>