force-app/main/default/objects/Account/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This is the city in which the building is located.</description>
    <label>City</label>
    <type>TextArea</type>
</CustomField>