force-app/main/default/objects/Account/fields/City_Formula__c.field-meta.xml
<CustomField>
    <fullName>City_Formula__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/r/City__c/&apos; + City_Lookup__r.Id  + &apos;/view&apos;, City_Lookup__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>