force-app/main/default/objects/Account/fields/City_Lookup__c.field-meta.xml
<CustomField>
    <fullName>City_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>