force-app/main/default/objects/Account/fields/Corporate_Guarantor_s__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Guarantor_s__c</fullName>
    <label>Corporate Guarantor(s)</label>
    <type>TextArea</type>
</CustomField>