force-app/main/default/objects/Account/fields/Costar_Report__c.field-meta.xml
<CustomField>
    <fullName>Costar_Report__c</fullName>
    <label>Costar Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Not on Costar</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Added</fullName>
                <isActive>false</isActive>
                <label>Added</label>
            </value>
            <value>
                <fullName>Not Added</fullName>
                <isActive>false</isActive>
                <label>Not Added</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>