force-app/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This is the country in which the building is located.</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
                <default>true</default>
                <label>USA</label>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>England</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>