force-app/main/default/objects/Account/fields/Critical_Dates__c.field-meta.xml
<CustomField>
    <fullName>Critical_Dates__c</fullName>
    <label>Critical Dates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>