force-app/main/default/objects/Account/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD - United States Dollar</fullName>
            </value>
            <value>
                <fullName>AUD - Australian Dollar</fullName>
            </value>
            <value>
                <fullName>EUR - Euro</fullName>
            </value>
            <value>
                <fullName>BRL - Brazilian Real</fullName>
            </value>
            <value>
                <fullName>CAD - Candian Dollar</fullName>
            </value>
            <value>
                <fullName>HKD - Hong Kong Dollar</fullName>
            </value>
            <value>
                <fullName>INR - Indian Rupee</fullName>
            </value>
            <value>
                <fullName>ILS - Israeli Shekel</fullName>
            </value>
            <value>
                <fullName>MXN - Mexican Peso</fullName>
            </value>
            <value>
                <fullName>NZD - New Zealand Dollar</fullName>
            </value>
            <value>
                <fullName>NOK - Norwegian Kroner</fullName>
            </value>
            <value>
                <fullName>PLN - Polish Zloty</fullName>
            </value>
            <value>
                <fullName>SGD - Singaporean Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>