force-app/main/default/objects/Account/fields/Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Direct_Phone__c</fullName>
    <label>Direct</label>
    <type>Phone</type>
</CustomField>