force-app/main/default/objects/Account/fields/Email_To_Map__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Map__c</fullName>
    <label>Email To Map</label>
    <length>100</length>
    <type>Text</type>
</CustomField>