force-app/main/default/objects/Account/fields/Free_Rent__c.field-meta.xml
<CustomField>
    <fullName>Free_Rent__c</fullName>
    <label>Free Rent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>