force-app/main/default/objects/Account/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <formula>LOWER( Property_Address__c) &amp; LOWER(City__c )&amp; LOWER(Text(State__c))</formula>
    <label>Full Address</label>
    <type>Text</type>
</CustomField>