force-app/main/default/objects/Account/fields/Furniture__c.field-meta.xml
<CustomField>
    <fullName>Furniture__c</fullName>
    <label>Furniture</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>