force-app/main/default/objects/Account/fields/Holdover__c.field-meta.xml
<CustomField>
    <fullName>Holdover__c</fullName>
    <label>Holdover</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>