force-app/main/default/objects/Account/fields/Holdover_Diction__c.field-meta.xml
<CustomField>
    <fullName>Holdover_Diction__c</fullName>
    <label>Holdover Diction</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>