force-app/main/default/objects/Account/fields/Important_Follow_Up_Dates__c.field-meta.xml
<CustomField>
    <fullName>Important_Follow_Up_Dates__c</fullName>
    <label>Important Follow Up Dates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>