force-app/main/default/objects/Account/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <label>Investment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Majority</fullName>
            </value>
            <value>
                <fullName>Minority</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Past</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>