force-app/main/default/objects/Account/fields/Landlord_Entity__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Entity__c</fullName>
    <label>Landlord Entity</label>
    <type>TextArea</type>
</CustomField>