force-app/main/default/objects/Account/fields/Landlord_Notice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Notice_Contact__c</fullName>
    <label>Landlord Notice Contact</label>
    <type>TextArea</type>
</CustomField>