force-app/main/default/objects/Account/fields/LCD__c.field-meta.xml
<CustomField>
    <fullName>LCD__c</fullName>
    <label>LCD</label>
    <type>Date</type>
</CustomField>