force-app/main/default/objects/Account/fields/Lease_Document_s__c.field-meta.xml
<CustomField>
    <fullName>Lease_Document_s__c</fullName>
    <description>This lists all the documents affiliated with the entire lease.</description>
    <inlineHelpText>Example: 
Lease. Amendment 01. Amendment 02. Start Date Confirmation Letter. Amendment 03. Estoppel Certificate. Amendment 04.</inlineHelpText>
    <label>Lease Document(s)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>