force-app/main/default/objects/Account/fields/Lease_notes__c.field-meta.xml
<CustomField>
    <fullName>Lease_notes__c</fullName>
    <label>Lease Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>