force-app/main/default/objects/Account/fields/Leases__c.field-meta.xml
<CustomField>
    <fullName>Leases__c</fullName>
    <label>Leases</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Lease Documents</fullName>
            </value>
            <value>
                <fullName>Combined Lease</fullName>
            </value>
            <value>
                <fullName>Highlighted Lease</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>