force-app/main/default/objects/Account/fields/LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_URL__c</fullName>
    <inlineHelpText>If no LinkedIn page, write “None”</inlineHelpText>
    <label>LinkedIn URL</label>
    <type>Url</type>
</CustomField>