force-app/main/default/objects/Account/fields/Listing_Broker__c.field-meta.xml
<CustomField>
    <fullName>Listing_Broker__c</fullName>
    <label>Listing Broker(not used)</label>
    <type>TextArea</type>
</CustomField>