force-app/main/default/objects/Account/fields/Listing_Broker_Company__c.field-meta.xml
<CustomField>
    <fullName>Listing_Broker_Company__c</fullName>
    <label>Listing Broker Company(not used)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beitler</fullName>
            </value>
            <value>
                <fullName>C&amp;W</fullName>
            </value>
            <value>
                <fullName>CBRE</fullName>
            </value>
            <value>
                <fullName>Charles Dunn</fullName>
            </value>
            <value>
                <fullName>Colliers</fullName>
            </value>
            <value>
                <fullName>Cornish &amp; Carey Commercial Newmark Knight Frank</fullName>
            </value>
            <value>
                <fullName>Industry Partners</fullName>
            </value>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>JLL</fullName>
            </value>
            <value>
                <fullName>Klabin Company</fullName>
            </value>
            <value>
                <fullName>Lee &amp; Associates</fullName>
            </value>
            <value>
                <fullName>MacVaugh &amp; Co.</fullName>
            </value>
            <value>
                <fullName>Madison Partners</fullName>
            </value>
            <value>
                <fullName>Murray Aronson</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>NAI Capital</fullName>
            </value>
            <value>
                <fullName>Newmark</fullName>
            </value>
            <value>
                <fullName>Paley Commercial</fullName>
            </value>
            <value>
                <fullName>PRES Companies</fullName>
            </value>
            <value>
                <fullName>PS Business Parks</fullName>
            </value>
            <value>
                <fullName>Regus</fullName>
            </value>
            <value>
                <fullName>Told Partners</fullName>
            </value>
            <value>
                <fullName>Transwestern</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>