force-app/main/default/objects/Account/fields/Listing_Broker_Company_new__c.field-meta.xml
<CustomField>
    <fullName>Listing_Broker_Company_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing Broker Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Listing_Broker_Company_new__c</field>
            <operation>equals</operation>
            <valueField>$Source.Tenant_Broker_Company_new__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>